--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CAFE</title>
     <!-- 網頁icon -->
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/Logo.png" />
-    <link rel="shortcut icon" href="/src/assets/icons/Logo.png" />
-    <link rel="bookmark" href="/src/assets/icons/Logo.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/icons/Logo-coffee.png"
+    />
+    <link rel="shortcut icon" href="/src/assets/icons/Logo-coffee.png" />
+    <link rel="bookmark" href="/src/assets/icons/Logo-coffee.png" />
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
